tests/fail_syntax/literal_str.stderr
error: expected string literal
 --> $DIR/literal_str.rs:3:27
  |
3 |     sscanf::scanf!(input, '{', std::vec::Vec<usize>);
  |                           ^^^
