tests/fail_syntax/literal_str.rs
fn main() {
    let input = "hi";
    sscanf::scanf!(input, '{', std::vec::Vec<usize>);
}
